<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistroFlotaFragment">

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="371dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/txtPlaca"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="371dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtMarca"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaca" />

    <EditText
        android:id="@+id/txtModelo"
        android:layout_width="371dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtModelo"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca" />

    <EditText
        android:id="@+id/txtAsientos"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txtAsientos"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModelo" />

    <EditText
        android:id="@+id/txtPoliza"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/txtPoliza"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModelo" />

    <EditText
        android:id="@+id/txtAñoFabricacion"
        android:layout_width="371dp"
        android:layout_height="35dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/txtAñoFabrizacion"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtModelo" />

    <Spinner
        android:id="@+id/spnEstado"
        android:layout_width="371dp"
        android:layout_height="30dp"
        android:layout_marginTop="248dp"
        android:entries="@array/estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardarFlota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#11615A"
        android:text="@string/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <Button
        android:id="@+id/btnCancelarRegistroFlota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#11615A"
        android:text="@string/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="371dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txtDescription"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnEstado" />
</androidx.constraintlayout.widget.ConstraintLayout>