<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassengerRegistryActivity">

    <RelativeLayout
        android:id="@+id/ctnPassengerRegistry"
        android:layout_width="410dp"
        android:layout_height="90dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="#2E2929"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/lblPassengerRegistry"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lblPassengerRegistry"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/spnIdc"
        android:layout_width="206dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="9dp"
        android:entries="@array/idc_array"
        app:layout_constraintEnd_toStartOf="@+id/txtIdc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctnPassengerRegistry" />

    <EditText
        android:id="@+id/txtIdc"
        android:layout_width="168dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:hint="@string/txtIdc"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctnPassengerRegistry" />

    <EditText
        android:id="@+id/txtNombres"
        android:layout_width="385dp"
        android:layout_height="42dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txtNombres"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtApellidoP"
        android:layout_width="384dp"
        android:layout_height="41dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txtApellidoP"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombres" />

    <EditText
        android:id="@+id/txtApellidoM"
        android:layout_width="384dp"
        android:layout_height="44dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:hint="@string/txtApellidoM"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoP" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="381dp"
        android:layout_height="41dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoM" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="382dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:hint="@string/txtTelefono"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="384dp"
        android:layout_height="49dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txtEdad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <Button
        android:id="@+id/btnGuardarPassengerRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="54dp"
        android:backgroundTint="#11615A"
        android:text="@string/btnGuardar"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelarPassengerRegistry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEdad" />

    <Button
        android:id="@+id/btnCancelarPassengerRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="65dp"
        android:backgroundTint="#11615A"
        android:text="@string/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEdad" />

    <ImageButton
        android:id="@+id/imbBtnViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancelarPassengerRegistry"
        app:srcCompat="@drawable/micuenta" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="204dp"
        app:layout_constraintEnd_toStartOf="@+id/imbBtnViaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGuardarPassengerRegistry"
        app:srcCompat="@drawable/viaje" />

    <TextView
        android:id="@+id/lblViajePassengerRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="220dp"
        android:text="@string/lblViaje"
        app:layout_constraintEnd_toStartOf="@+id/lblCuentaPassengerRegistry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/lblCuentaPassengerRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="46dp"
        android:text="@string/lblMiCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imbBtnViaje" />

</androidx.constraintlayout.widget.ConstraintLayout>