<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="142dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ctnLogin"
        app:srcCompat="@drawable/login" />

    <RelativeLayout
        android:id="@+id/ctnLogin"
        android:layout_width="409dp"
        android:layout_height="90dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#2E2929"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/lblLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoText="false"
            android:editable="false"
            android:gravity="center"
            android:text="@string/lblLogin"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="373dp"
        android:layout_height="45dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/txtCorreo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginView" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="376dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="19dp"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCorreo" />

    <TextView
        android:id="@+id/lblForgotPasswd"
        android:layout_width="136dp"
        android:layout_height="22dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="138dp"
        android:text="@string/lblForgotPasswd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="371dp"
        android:layout_height="44dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="#11615A"
        android:text="@string/btnIngresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblForgotPasswd" />

    <TextView
        android:id="@+id/lblNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="155dp"
        android:text="@string/lblNew"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnIngresar" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="364dp"
        android:layout_height="47dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#B7C3C2"
        android:text="@string/btnCrear"
        android:textColor="#141515"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblNew" />

    <TextView
        android:id="@+id/lblCondiciones"
        android:layout_width="199dp"
        android:layout_height="43dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="101dp"
        android:text="@string/lblCondiciones"
        android:textColor="#065C77"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCrear" />

</androidx.constraintlayout.widget.ConstraintLayout>