<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnBuscarBuses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BuscarBoletosFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/lblSeleccionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblSeleccionar"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnOrigenBoleto"
        android:layout_width="163dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:entries="@array/origen_array"
        android:inputType="time"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSeleccionar" />

    <Spinner
        android:id="@+id/spnDestinoBoleto"
        android:layout_width="163dp"
        android:layout_height="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:entries="@array/destino_array"
        android:inputType="time"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblIda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/lblIda"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnOrigenBoleto" />

    <EditText
        android:id="@+id/dateIda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/txtFecha"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnDestinoBoleto" />

    <Button
        android:id="@+id/btnBuscarViajes"
        android:layout_width="371dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#11615A"
        android:text="@string/btnBuscarViajes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateIda" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewViajes"
        android:layout_width="409dp"
        android:layout_height="513dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarViajes"
        tools:listitem="@layout/list_recycle_boletos" />

</androidx.constraintlayout.widget.ConstraintLayout>